--- a/index.html
+++ b/index.html
@@ -7,4 +7,7 @@
     <title>my second github repo</title>
 </head>
 <body>
-    
+   <h1>I can push to github</h1>
+   <h2>Mama i can ode now</h2>
+</body>
+</html>    
