--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second github repo</title>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
    <h1>I can push to github</h1>
    <h2>Mama i can ode now</h2>
+   <h3>New code changed</h3>
+   <p>Now i am interested in learning web development</p>
+   <p>More paragraph</p>
 </body>
 </html>    
